style: fix coding styles and potential bugs